--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>titulo do site</h1>
+            <h1>curso de graça</h1>
         </header>
         <article>
-            <h2>artigo 001</h2>
-            <p>texto artigo 001</p>
+            <h2>Curso HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui dolorum quidem earum iusto eligendi, quae similique sed quasi suscipit et, accusantium itaque nulla dolor. Recusandae aliquam molestias odio et.</p>
         </article>
         <article>
-            <h2>artigo 002</h2>
-            <p>texto artigo 002</p>
+            <h2>curso de javascript</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores magnam ducimus maiores, veniam officia libero cupiditate voluptatem ipsa cum eos. Voluptatibus eveniet alias vero veritatis neque dolorum at laudantium porro.</p>
         </article>
     </main>
 </body>
